create tab and poptip

--- a/src/components/_var.scss
+++ b/src/components/_var.scss
@@ -13,9 +13,10 @@ $font-size: 14px;
 $input-height: 32px;
 
 $color: #333;
-$red: #F1453D;
+$red: #f1453d;
 $grey: #eee;
+$blue: #2d8cf0;
 
 .box-shadow {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
