notice and modal

--- a/src/components/_var.scss
+++ b/src/components/_var.scss
@@ -31,7 +31,19 @@ $animationTime: 0.3s;
     opacity: 0;
 }
 
-.drop-enter-active, .drop-leave-active {
+.scale-enter-active,
+.scale-leave-active {
+    transition: all $transitionTime;
+}
+
+.scale-enter,
+.scale-leave-to {
+    transform: scale(0);
+    opacity: 0.5;
+}
+
+.drop-enter-active,
+.drop-leave-active {
     transform-origin: center top 0;
     animation-play-state: running;
     animation-fill-mode: both;
